[package]
name = "key_value_database"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.80"
async-raft = "0.6.1"
bytes = "1.5.0"
clap = { version = "4.5.9", features = ["derive"] }
crc32fast = "1.4.2"
dashmap = "6.0.1"
farmhash = "1.1.5"
futures = "0.3.30"
openraft = "0.9.5"
parking_lot = "0.12.3"
prost = "0.13.1"
rand = "0.8.5"
rocksdb = "0.22.0"
serde = {version =  "1.0", features= ["derive"]}
serde_json = "1.0.114"
tokio = {version = "1.36.0", features = ["full"]}
tokio-stream = "0.1.15"
tokio-util = {version = "0.7.11", features = ["codec"]}
toml = "0.8.10"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[build-dependencies]
prost-build = "0.13.1"


